@@ -3,6 +3,7 @@ package release
 import (
 	"crypto/md5"
 	"fmt"
+	"io"
 	"io/ioutil"
 	"os"
 	"path/filepath"
@@ -15,28 +16,32 @@ type platform struct {
 	Digest string `json:"digest"`
 }
 
-func buildPlatform(ver, platformName, distDir, binName string, u uploader, platformChan chan platform) error {
+func buildPlatform(ver, platformName, distDir, binName string, u uploader) (platform, error) {
 	f, err := os.Open(filepath.Join(distDir, platformName, binName))
 	if err != nil {
-		return err
+		return platform{}, err
 	}
-	defer f.Close()
 
 	data, err := ioutil.ReadAll(f)
 	if err != nil {
-		return err
+		return platform{}, err
 	}
+
+	f.Seek(0, io.SeekStart)
 
 	fullName := strings.Join([]string{ver, platformName, binName}, "/")
 	url, err := u.File(fullName, f)
 	if err != nil {
-		return err
+		return platform{}, err
 	}
 
-	platformChan <- platform{
+	if err := f.Close(); err != nil {
+		return platform{}, err
+	}
+
+	return platform{
 		Name:   platformName,
 		URL:    url,
 		Digest: fmt.Sprintf("%x", md5.Sum(data)),
-	}
-	return nil
+	}, nil
 }
